# py_auto_tester

./: .gitignore  BUILD_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  build.conf  build_and_publish.bat  build_and_publish.py  build_and_publish.sh  example_source.py  install_and_test.py  pyproject.toml  requirements.txt  setup.py
py_auto_tester/: __init__.py  __main__.py  cli.py  core.py
tests/: test_auto_tester.py
