[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_auto_tester"
version = "0.2.0"
description = "Python自动化单元测试工具"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Fandaw", email = "542483297@qq.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]
coverage = [
    "coverage>=5.0",
]

[project.urls]
Homepage = "https://github.com/Fandaw/py_auto_tester"
"Bug Reports" = "https://github.com/Fandaw/py_auto_tester/issues"
"Source Code" = "https://github.com/Fandaw/py_auto_tester"

[project.scripts]
py-auto-tester = "py_auto_tester.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["py_auto_tester*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]